Start replacing FileInfo with S3FileInfo in S3FileInfoStore